Поправлены ссылки у футера и хэдера

--- a/catalog.html
+++ b/catalog.html
@@ -7,13 +7,13 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-link" href="#">
+        <a class="main-link" href="index.html">
           <img class="navigation-logo" src="" alt="Логотип города Седона">
         </a>
 
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="catalog.html">
               Гостиницы
             </a>
           </li>
@@ -255,7 +255,9 @@
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
 
-      <img class="footer-logo" src="" alt="Логотип html academy">
+      <a class="developer-link" href="https://htmlacademy.ru/">
+        <img class="developer-logo" src="" alt="Логотип html academy">
+      </a>
     </footer>
   </body>
 </html>
