Добавлены тестовые флаги, плюс правка по автопроверке

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header" data-test="header">
       <nav class="main-navigation">
         <a class="main-link" href="index.html">
           <img class="navigation-logo" src="" alt="Логотип города Седона">
@@ -57,7 +57,7 @@
           </a>
         </li>
         <li class="catalog-breadcrumbs-item">
-          <a class="catalog-breadcrumbs-link" href="index.html">
+          <a class="catalog-breadcrumbs-link" href="catalog.html">
             <span class="visually-hidden">Гостиницы</span>
           </a>
         </li>
@@ -65,7 +65,7 @@
 
       <section class="hotels-catalog">
         <h2 class="visually-hidden">Список отелей с фильтром</h2>
-        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <form class="catalog-filter" data-test="filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-group-title">Инфраструктура:</legend>
             <ul class="catalog-filter-list">
@@ -143,7 +143,7 @@
           </li>
         </ul>
 
-        <ul class="hotels-list">
+        <ul class="hotels-list" data-test="catalog">
           <li class="hotel-card">
             <img class="hotel-card-picture" src="" alt="Вид из ущелья">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
@@ -221,7 +221,7 @@
         </ul>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" data-test="subscribe">
         <h2 class="subscription-title">Подпишитесь на рассылку</h2>
         <p class="subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -232,7 +232,7 @@
       </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer" data-test="footer">
       <ul class="social-list">
         <li class="social-item">
           <a class="social-link" href="https://vk.com/htmlacademy">
