--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header" data-test="header">
       <nav class="main-navigation">
         <a class="main-link" href="index.html">
-          <img class="navigation-logo" src="" alt="Логотип города Седона">
+          <img class="navigation-logo" src="images/sedona-logo.png" width="140" height="70" alt="Логотип города Седона">
         </a>
 
         <ul class="navigation-list">
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">
+            <a class="navigation-link" aria-current="page" href="catalog.html">
               Гостиницы
             </a>
           </li>
@@ -38,6 +38,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <span> 12</span>
             </a>
           </li>
         </ul>
@@ -49,22 +50,22 @@
     </header>
 
     <main class="main-hotels">
-      <h1 class="">Гостиницы Седоны</h1>
-      <ul class="catalog-breadcrumbs-list">
-        <li class="catalog-breadcrumbs-item">
-          <a class="catalog-breadcrumbs-link" href="index.html">
-            <span class="visually-hidden">Главная</span>
-          </a>
-        </li>
-        <li class="catalog-breadcrumbs-item">
-          <a class="catalog-breadcrumbs-link" href="catalog.html">
-            <span class="visually-hidden">Гостиницы</span>
-          </a>
-        </li>
-      </ul>
-
       <section class="hotels-catalog">
-        <h2 class="visually-hidden">Список отелей с фильтром</h2>
+        <h1 class="">Гостиницы Седоны</h1>
+
+        <ul class="catalog-breadcrumbs-list">
+          <li class="catalog-breadcrumbs-item">
+            <a class="catalog-breadcrumbs-link" href="index.html">
+              <span class="visually-hidden">Главная</span>
+            </a>
+          </li>
+          <li class="catalog-breadcrumbs-item">
+            <a class="catalog-breadcrumbs-link" aria-current="page" href="catalog.html">
+              <span class="visually-hidden">Гостиницы</span>
+            </a>
+          </li>
+        </ul>
+
         <form class="catalog-filter" data-test="filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-group-title">Инфраструктура:</legend>
@@ -133,68 +134,67 @@
         </select>
         <ul class="view-type-list" aria-label="Способ отображения каталога">
           <li class="view-type-item">
-            <button class="button catalog-view-type-button visually-hidden" type="button">В виде таблицы</button>
+            <button class="button catalog-view-mode-button visually-hidden" type="button">В виде таблицы</button>
           </li>
           <li class="view-type-item">
-            <button class="button catalog-view-type-button visually-hidden" type="button">В виде слайдшоу</button>
+            <button class="button catalog-view-mode-button visually-hidden" type="button">В виде слайдшоу</button>
           </li>
           <li class="view-type-item">
-            <button class="button catalog-view-type-button visually-hidden" type="button">В виде списка</button>
+            <button class="button catalog-view-mode-button visually-hidden" type="button">В виде списка</button>
           </li>
         </ul>
 
         <ul class="hotels-list" data-test="catalog">
           <li class="hotel-card">
-            <img class="hotel-card-picture" src="" alt="Вид из ущелья">
-            <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-picture" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="Вид из ущелья">
+              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+            </a>
             <p class="hotel-card-description">Гостинница <b>От 4000₽</b></p>
             <a class="button" href="#">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <ul class="stars-list">
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-            </ul>
+            <p class="hotel-stars">
+              <span class="visually-hidden">Отель 4 звезды</span>
+            </p>
             <p>Рейтинг: 8,5</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-picture" src="" alt="Драматический пейзаж со скалистым горным хребтом, освещенным солнечным светом, с радугой, выгибающейся над темным, облачным небом. Густая листва покрывает местность на переднем плане.">
-            <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-picture" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="Пейзаж со скалистым горным хребтом">
+              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            </a>
             <p class="hotel-card-description">Гостинница <b>От 5000₽</b></p>
             <a class="button" href="#">Подробнее</a>
             <button class="button" type="button">В избранном</button>
-            <ul class="stars-list">
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-            </ul>
+            <p class="hotel-stars">
+              <span class="visually-hidden">Отель 4 звезды</span>
+            </p>
             <p>Рейтинг: 9,2</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-picture" src="" alt="Красная скала">
-            <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-picture" src="images/hotels/hotel-3.jpg" width="300" height="212" alt="Красная скала">
+              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            </a>
             <p class="hotel-card-description">Гостинница <b>От 2500₽</b></p>
             <a class="button" href="#">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <ul class="stars-list">
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-            </ul>
+            <p class="hotel-stars">
+              <span class="visually-hidden">Отель 3 звезды</span>
+            </p>
             <p>Рейтинг: 6,9</p>
           </li>
           <li class="hotel-card">
-            <img class="hotel-card-picture" src="" alt="Ночное небо, усыпанное звездами, над красной скалой, освещенной оранжевым светом.">
-            <h3 class="hotel-card-title">GreenTree Inn</h3>
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-picture" src="images/hotels/hotel-4.jpg" width="300" height="212" alt="Ночное небо, усыпанное звездами, над красной скалой, освещенной оранжевым светом.">
+              <h3 class="hotel-card-title">GreenTree Inn</h3>
+            </a>
             <p class="hotel-card-description">Гостинница <b>От 1500₽</b></p>
             <a class="button" href="#">Подробнее</a>
             <button class="button" type="button">В избранное</button>
-            <ul class="stars-list">
-              <li class="visually-hidden">*</li>
-              <li class="visually-hidden">*</li>
-            </ul>
+            <p class="hotel-stars">
+              <span class="visually-hidden">Отель 2 звезды</span>
+            </p>
             <p>Рейтинг: 5,0</p>
           </li>
         </ul>
@@ -256,7 +256,7 @@
       </address>
 
       <a class="developer-link" href="https://htmlacademy.ru/">
-        <img class="developer-logo" src="" alt="Логотип html academy">
+        <img class="developer-logo" src="images/socials/html-academy-logo.svg" alt="Логотип html academy">
       </a>
     </footer>
   </body>
