--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header" data-test="header">
       <nav class="main-navigation">
         <a class="main-link" href="index.html">
-          <img class="navigation-logo" src="images/sedona-logo.png" width="140" height="70" alt="Логотип города Седона">
+          <img class="navigation-logo" src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
         </a>
 
         <ul class="navigation-list">
@@ -38,7 +39,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span> 12</span>
+              <span>12</span>
             </a>
           </li>
         </ul>
@@ -51,7 +52,7 @@
 
     <main class="main-hotels">
       <section class="hotels-catalog">
-        <h1 class="">Гостиницы Седоны</h1>
+        <h1>Гостиницы Седоны</h1>
 
         <ul class="catalog-breadcrumbs-list">
           <li class="catalog-breadcrumbs-item">
@@ -65,7 +66,9 @@
             </a>
           </li>
         </ul>
-
+      </section>
+      <section>
+        <h2 class="visually-hidden">Фильтры каталога</h2>
         <form class="catalog-filter" data-test="filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-group-title">Инфраструктура:</legend>
@@ -125,16 +128,19 @@
           <button class="button" type="submit">Применить</button>
           <button class="button button-alpha" type="reset">Сбросить</button>
         </form>
+      </section>
+      <section>
+        <h2 class="hotels-counter">Найденно гостинниц: <span>38</span></h2>
 
-        <p class="hotels-counter">Найденно гостинниц: 38</p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешeвые</option>
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
+
         <ul class="view-type-list" aria-label="Способ отображения каталога">
           <li class="view-type-item">
-            <button class="button catalog-view-mode-button visually-hidden" type="button">В виде таблицы</button>
+            <button class="button catalog-view-mode-button visually-hidden" type="button">В виде сетки</button>
           </li>
           <li class="view-type-item">
             <button class="button catalog-view-mode-button visually-hidden" type="button">В виде слайдшоу</button>
@@ -256,7 +262,7 @@
       </address>
 
       <a class="developer-link" href="https://htmlacademy.ru/">
-        <img class="developer-logo" src="images/socials/html-academy-logo.svg" alt="Логотип html academy">
+        <span class="visually-hidden developer-logo">Логотип html academy</span>
       </a>
     </footer>
   </body>
