--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="main-header" data-test="header">
       <nav class="main-navigation">
         <a class="main-link" aria-current="page" href="index.html">
-          <img class="navigation-logo" src="images/sedona-logo.png" width="140" height="70" alt="Логотип города Седона">
+          <img class="navigation-logo" src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
         </a>
 
         <ul class="navigation-list">
@@ -63,7 +64,7 @@
           <li class="advantages-item advantages-item-media">
             <h3 class="advantages-item-title">Настоящий городок</h3>
             <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-item-image" src="images/advantages/photo-1.jpg" width="800" height="385" alt="Фото городка Седона">
+            <img class="advantages-item-image" src="images/advantages/photo-1.jpg" width="800" height="385" alt="Здание с флагами">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-item-title">Небольшая площадь</h3>
@@ -147,7 +148,7 @@
       </address>
 
       <a class="developer-link" href="https://htmlacademy.ru/">
-        <img class="developer-logo" src="images/socials/html-academy-logo.svg" alt="Логотип html academy">
+        <span class="visually-hidden developer-logo">Логотип html academy</span>
       </a>
     </footer>
   </body>
