Правки после автоматической проверки

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span> 12</span>
+              <span class="favorites-badge">12</span>
             </a>
           </li>
         </ul>
