--- a/catalog.html
+++ b/catalog.html
@@ -73,13 +73,13 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="pool">
+                  <input class="control-input" type="checkbox" name="pool" checked>
                   Бассейн
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="parking">
+                  <input class="control-input" type="checkbox" name="parking" checked>
                   Парковка
                 </label>
               </li>
@@ -97,7 +97,7 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="accommodation-type" value="hotel">
+                  <input class="control-input" type="radio" name="accommodation-type" value="hotel" checked>
                   Гостиница
                 </label>
               </li>
@@ -118,16 +118,21 @@
 
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-group-title">Стоимость, ₽:</legend>
-            <!--
-              TODO: Здесь нужно добавить свайпер с ценой
-            -->
+            <label>
+              От
+              <input class="control-input" type="number" name="min-price" value="0">
+            </label>
+            <label>
+              До
+              <input class="control-input" type="number" name="max-price" value="9000">
+            </label>
           </fieldset>
 
           <button class="button button-second" type="submit">Применить</button>
           <button class="button button-alpha" type="reset">Сбросить</button>
         </form>
       </section>
-      <section>
+      <section data-test="catalog">
         <h2 class="hotels-counter">Найденно гостинниц: <span>38</span></h2>
 
         <select class="select-control" aria-label="Сортировка">
@@ -148,7 +153,7 @@
           </li>
         </ul>
 
-        <ul class="hotels-list" data-test="catalog">
+        <ul class="hotels-list" >
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-picture" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="Вид из ущелья">
