Правки цветов у блоков и текстов

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h3 class="advantages-item-title">Небольшая площадь</h3>
             <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-medium">
             <h3 class="advantages-item-title">Красивая дорога</h3>
             <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
