--- a/catalog.html
+++ b/catalog.html
@@ -159,7 +159,10 @@
               <img class="hotel-card-picture" src="images/hotels/hotel-1.jpg" width="300" height="212" alt="Вид из ущелья">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <p class="hotel-card-description">Гостинница <span>От 4000₽</span></p>
+            <div class="hotel-card-description">
+              <p class="hotel-card-type">Гостинница</p>
+              <p class="hotel-card-price">От 4000 ₽</p>
+            </div>
             <a class="button base-button" href="#">Подробнее</a>
             <button class="button button-second" type="button">В избранное</button>
             <p class="hotel-stars">
@@ -172,7 +175,10 @@
               <img class="hotel-card-picture" src="images/hotels/hotel-2.jpg" width="300" height="212" alt="Пейзаж со скалистым горным хребтом">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <p class="hotel-card-description">Гостинница <span>От 5000₽</span></p>
+            <div class="hotel-card-description">
+              <p class="hotel-card-type">Гостинница</p>
+              <p class="hotel-card-price">От 5000 ₽</p>
+            </div>
             <a class="button base-button" href="#">Подробнее</a>
             <button class="button button-selected" type="button">В избранном</button>
             <p class="hotel-stars">
@@ -185,7 +191,10 @@
               <img class="hotel-card-picture" src="images/hotels/hotel-3.jpg" width="300" height="212" alt="Красная скала">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <p class="hotel-card-description">Гостинница <span>От 2500₽</span></p>
+            <div class="hotel-card-description">
+              <p class="hotel-card-type">Гостинница</p>
+              <p class="hotel-card-price">От 2500 ₽</p>
+            </div>
             <a class="button base-button" href="#">Подробнее</a>
             <button class="button button-second" type="button">В избранное</button>
             <p class="hotel-stars">
@@ -198,7 +207,10 @@
               <img class="hotel-card-picture" src="images/hotels/hotel-4.jpg" width="300" height="212" alt="Ночное небо, усыпанное звездами, над красной скалой, освещенной оранжевым светом.">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <p class="hotel-card-description">Гостинница <span>От 1500₽</span></p>
+            <div class="hotel-card-description">
+              <p class="hotel-card-type">Гостинница</p>
+              <p class="hotel-card-price">От 1500 ₽</p>
+            </div>
             <a class="button base-button" href="#">Подробнее</a>
             <button class="button button-second" type="button">В избранное</button>
             <p class="hotel-stars">
