--- a/index.html
+++ b/index.html
@@ -6,150 +6,162 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <header class="main-header" data-test="header">
-      <nav class="main-navigation">
-        <a class="main-link" aria-current="page" href="index.html">
-          <img class="navigation-logo" src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
-        </a>
+    <div class="page-container">
+      <header class="main-header container" data-test="header">
+        <div class="main-header-left">
+          <a class="main-link" href="index.html">
+            <img class="navigation-logo" src="images/logo.svg" width="140" height="70" alt="Логотип города Седона">
+          </a>
 
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              О Седоне
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">
-              Гостиницы
-            </a>
-          </li>
-        </ul>
+          <nav class="main-navigation">
+            <ul class="navigation-list">
+              <li class="navigation-item">
+                <a class="navigation-link" aria-current="page" href="index.html">
+                  Главная
+                </a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">
+                  О Седоне
+                </a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="catalog.html">
+                  Гостиницы
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
 
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
+          <li class="navigation-item navigation-button">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-item navigation-button">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
               <span class="favorites-badge">12</span>
             </a>
           </li>
-        </ul>
-
-        <a class="button navigation-button base-button" href="#">
-          Хочу сюда!
-        </a>
-      </nav>
-    </header>
-
-    <main class="main-index" data-test="main">
-      <section class="hero" data-test="hero">
-        <h1 class="visually-hidden">Город Седона</h1>
-        <img class="hero-image" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because Grand Canyon sucks!">
-      </section>
-
-      <section class="advantages" data-test="advantages">
-        <h2 class="visually-hidden">Преймущества города Седоны</h2>
-        <p class="advantages-title"><b>Седона</b> — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="advantages-list">
-          <li class="advantages-item advantages-item-media">
-            <h3 class="advantages-item-title">Настоящий городок</h3>
-            <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-item-image" src="images/advantages/photo-1.jpg" width="800" height="385" alt="Здание с флагами">
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Небольшая площадь</h3>
-            <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item advantages-medium">
-            <h3 class="advantages-item-title">Красивая дорога</h3>
-            <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Мало туристов</h3>
-            <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item advantages-item-media">
-            <h3 class="advantages-item-title">Там есть мост дьявола</h3>
-            <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="advantages-item-image" src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
+          <li>
+            <a class="button base-button" href="#">
+              Хочу сюда!
+            </a>
           </li>
         </ul>
-      </section>
+      </header>
 
-      <section class="features">
-        <h2 class="visually-hidden">Особенности города Седоны</h2>
-        <p class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-        <p class="features-description">Опытный персонал и качественное обслуживание!</p>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-item-title">Жильё</h3>
-            <p class="features-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      <main class="main-index main-container" data-test="main">
+        <section class="hero" data-test="hero">
+          <h1 class="visually-hidden">Город Седона</h1>
+          <img class="hero-image" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because Grand Canyon sucks!">
+        </section>
+
+        <section class="advantages" data-test="advantages">
+          <div class="container">
+            <h2 class="visually-hidden">Преймущества города Седоны</h2>
+            <p class="advantages-title"><b>Седона</b> — небольшой городок в Аризоне, заслуживающий большего!</p>
+            <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
+
+          <ul class="advantages-list">
+            <li class="advantages-item advantages-item-media">
+              <h3 class="advantages-item-title">Настоящий городок</h3>
+              <p class="advantages-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img class="advantages-item-image" src="images/advantages/photo-1.jpg" width="800" height="385" alt="Здание с флагами">
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">Небольшая площадь</h3>
+              <p class="advantages-item-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item advantages-medium">
+              <h3 class="advantages-item-title">Красивая дорога</h3>
+              <p class="advantages-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">Мало туристов</h3>
+              <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item advantages-item-media">
+              <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+              <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <img class="advantages-item-image" src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
+            </li>
+          </ul>
+        </section>
+
+        <section class="features">
+          <div class="container">
+            <h2 class="visually-hidden">Особенности города Седоны</h2>
+            <p class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+            <p class="features-description">Опытный персонал и качественное обслуживание!</p>
+          </div>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-item-title">Жильё</h3>
+              <p class="features-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-item-title">Еда</h3>
+              <p class="features-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-item-title">Сувениры</h3>
+              <p class="features-item-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="booking" data-test="search">
+          <div class="container">
+            <h2 class="visually-hidden">Бронирование гостинницы</h2>
+            <p class="booking-title">Заинтересовались?</p>
+            <p class="booking-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button base-button booking-button" href="#">Поиск гостинницы в седоне</a>
+          </div>
+        </section>
+
+        <section class="subscription subscription-decorated" data-test="subscribe">
+          <div class="container">
+            <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+            <p class="subscription-description subscription-decorated-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label class="visually-hidden" for="subscription-email">Электронная почта</label>
+              <input class="subscription-form-email" type="text" name="subscription-email" id="subscription-email" placeholder="Ваша электронная почта" required>
+              <button class="button button-second subscription-form-button" type="submit">Подписаться</button>
+            </form>
+          </div>
+        </section>
+      </main>
+
+      <footer class="main-footer container" data-test="footer">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Vkontakte</span>
+            </a>
           </li>
-          <li class="features-item">
-            <h3 class="features-item-title">Еда</h3>
-            <p class="features-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="social-item">
+            <a class="social-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Telegram</span>
+            </a>
           </li>
-          <li class="features-item">
-            <h3 class="features-item-title">Сувениры</h3>
-            <p class="features-item-description">Не только китайского, но и настоящего местного производства!</p>
+          <li class="social-item">
+            <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
           </li>
         </ul>
-      </section>
 
-      <section class="booking" data-test="search">
-        <h2 class="visually-hidden">Бронирование гостинницы</h2>
-        <p class="booking-title">Заинтересовались?</p>
-        <p class="booking-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button base-button booking-button" href="#">Поиск гостинницы в седоне</a>
-      </section>
-
-      <section class="subscription subscription-decorated" data-test="subscribe">
-        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-        <p class="subscription-description subscription-decorated-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label class="visually-hidden" for="subscription-email">Электронная почта</label>
-          <input class="subscription-form-email" type="text" name="subscription-email" id="subscription-email" placeholder="Ваша электронная почта" required>
-          <button class="button button-second subscription-form-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
-
-    <footer class="main-footer" data-test="footer">
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vkontakte</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Youtube</span>
-          </a>
-        </li>
-      </ul>
-
-      <address class="contacts">
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </address>
 
-      <a class="developer-link" href="https://htmlacademy.ru/">
-        <span class="visually-hidden developer-logo">Логотип html academy</span>
-      </a>
-    </footer>
+        <a class="developer-link" href="https://htmlacademy.ru/">
+          <span class="visually-hidden developer-logo">Логотип html academy</span>
+        </a>
+      </footer>
+    </div>
   </body>
 </html>
