Правка границ пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -300,22 +300,22 @@
 
             <ul class="pagination-list">
               <li class="pagination-item">
-                <a class="button pagination-button pagination-button-active" href="#">1</a>
+                <a class="pagination-button pagination-button-active" href="#">1</a>
               </li>
               <li class="pagination-item">
-                <a class="button pagination-button" href="#">2</a>
+                <a class="pagination-button" href="#">2</a>
               </li>
               <li class="pagination-item">
-                <a class="button pagination-button" href="#">3</a>
+                <a class="pagination-button" href="#">3</a>
               </li>
               <li class="pagination-item">
-                <a class="button pagination-button" href="#">4</a>
+                <a class="pagination-button" href="#">4</a>
               </li>
               <li class="pagination-item">
                 <span class="pagination-ellipsis">...</span>
               </li>
               <li class="pagination-item">
-                <a class="button pagination-button" href="#">10</a>
+                <a class="pagination-button" href="#">10</a>
               </li>
             </ul>
           </div>
