Правки после автопроверки

--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">
+              <a class="navigation-link navigation-link-active" href="catalog.html">
                 Гостиницы
               </a>
             </li>
