--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <nav class="main-navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" aria-current="page" href="index.html">
+              <a class="navigation-link navigation-link-active" aria-current="page" href="index.html">
                 Главная
               </a>
             </li>
@@ -135,15 +135,15 @@
           <p class="features-description">Опытный персонал и качественное обслуживание!</p>
         </div>
         <ul class="features-list">
-          <li class="features-item">
+          <li class="features-item feature-house">
             <h3 class="features-item-title">Жильё</h3>
             <p class="features-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="features-item">
+          <li class="features-item feature-food">
             <h3 class="features-item-title">Еда</h3>
             <p class="features-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="features-item">
+          <li class="features-item feature-gift">
             <h3 class="features-item-title">Сувениры</h3>
             <p class="features-item-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
@@ -201,7 +201,7 @@
 
         <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
-        <a class="developer-link" href="https://htmlacademy.ru/">
+        <a class="developer-link" href="https://htmlacademy.ru/" aria-label="HTML Academy">
           <svg class="developer-logo" width="115" height="34" aria-hidden="true" focusable="false">
             <use xlink:href="#html-academy-logo"></use>
           </svg>
